# geoproc

./: .pre-commit-config.yaml  .readthedocs.yml  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  index.md  index.rst  notebook1.ipynb  notebook2.md
eoengine/: image.py
eoproc/: __init__.py  client.py  image.py  types.py
eoproc/server/: __init__.py  image.py  main.py
eotoolkit/: api.py  image.py
eotoolkit/server/: __init__.py  api.py  main.py  models.py
examples/: playground.ipynb  rasterio-tests.ipynb  rio-tiler-tests.ipynb
examples/tiles_cog/: small_tci_1_1.tif  small_tci_1_2.tif  small_tci_1_3.tif  small_tci_1_4.tif  small_tci_2_1.tif  small_tci_2_2.tif  small_tci_2_3.tif  small_tci_2_4.tif  small_tci_3_1.tif  small_tci_3_2.tif  small_tci_3_3.tif  small_tci_3_4.tif
geoproc/: __init__.py  client.py  image.py  models.py  types.py
geoproc/server/: __init__.py  app.py  image.py  main.py  models.py  types.py
tests/: test_api.py  test_client.py  test_image.py
tests/fixtures/: tci.tif
tests/server/: test_image.py
