[tool.poetry]
name = "eotoolkit"
version = "0.1.0"
description = "An extensible open source Earth Observation toolkit"
authors = ["Damián Silvani <munshkr@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pystac-client = "^0.5.1"
dask = "^2022.11.1"
rasterio = "^1.3.4"
rioxarray = "^0.13.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
