[tool.poetry]
name = "eotoolkit"
version = "0.1.0"
description = "An extensible open source Earth Observation toolkit"
authors = ["Damián Silvani <munshkr@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
rio-tiler = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
