[tool.poetry]
name = "eoproc"
version = "0.1.0"
description = "An extensible open source toolkit for processing geospatial imagery with ease"
authors = ["Damián Silvani <munshkr@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
rio-tiler = "^4.1.0"
fastapi = "^0.87.0"
uvicorn = { extras = ["standard"], version = "^0.20.0" }
httpx = "^0.23.1"
rio-cogeo = "^3.5.0"
shapely = "^1.8.5"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-watch = "^4.2.0"
black = "^22.10.0"
pytest-mock = "^3.10.0"
folium = "^0.13.0"
mypy = "^0.991"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
